GameController'da gereksiz metotlar kaldırıldı ve hata mesajları güncellendi. GameAnswerDTO ve InitialGameDataDTO'dan sessionId alanları kaldırıldı. GameService ve GameServiceImpl'de analiz ve oyun bitirme metotları silindi. Frontend'de oyun oturumu yönetimi güncellendi, yeni state'ler eklendi ve hata kontrolü iyileştirildi. Ayrıca, dil dosyalarına yeni hata mesajları eklendi.